# above-all-graphs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/: graph.html.template
assets/skills/: aag-debugging.md  aag-exploring.md  aag-guide.md  aag-impact.md  aag-pr-review.md  aag-refactoring.md  aag-wiki.md
docs/: agent-integration.md  bigbang.md  capability-coverage.md  cli.md  describe-cmd.md  entry-point.md  errors.md  explore-cmd.md  export.md  hooks.md  impact-cmd.md  mcp.md  openapi-contracts.md  parse.md  refactor.md  resolve.md  semantic-search.md  storage.md  sync.md  watch.md  workspaces.md
npm/: install.js  package.json
protocol/: CONFORMANCE.md  aag.bootstrap.schema.json  aag.manifest.schema.json  aag.protocol.schema.json  aag.protocol.yaml  context.example.yaml
src/: analysis.rs  artifacts.rs  bigbang.rs  cli.rs  docs.rs  error.rs  explore.rs  export.rs  federation.rs  hook.rs  hub.rs  impact.rs  install.rs  lib.rs  lock.rs  main.rs  mcp.rs  openapi.rs  parse.rs  pr.rs  protocol.rs  refactor.rs  resolve.rs  semantic.rs  storage.rs  sync.rs  watch.rs  workspaces.rs
