[package]
name = "aag"
version = "0.1.0"
edition = "2024"
description = "AboveAllGraphs — code knowledge graph, always fresh, MCP-native."
license = "MIT"

[[bin]]
name = "aag"
path = "src/main.rs"

[lib]
name = "aag"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.26"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.24"
walkdir = "2"
serde_json = "1"
notify = "8"
notify-debouncer-mini = "0.7"
tiny_http = "0.12"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
