[package]
name = "aag"
version = "0.2.0"
edition = "2024"
description = "AboveAllGraphs — code knowledge graph, always fresh, MCP-native."
license = "MIT"

[[bin]]
name = "aag"
path = "src/main.rs"

[lib]
name = "aag"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.26"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-language-pack = "1.13.2"
ignore = "0.4"
serde_json = "1"
serde_yaml_ng = "0.10"
jsonschema = { version = "0.48", default-features = false }
notify = "8"
notify-debouncer-mini = "0.7"
tiny_http = "0.12"
fastembed = { version = "5.17.3", optional = true }

[features]
default = []
semantic = ["dep:fastembed"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
